vivado_prjs/fixed_packing/vivado_hls.log

****** Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.2.1 (64-bit)
  **** SW Build 2729669 on Thu Dec  5 04:48:12 MST 2019
  **** IP Build 2729494 on Thu Dec  5 07:38:25 MST 2019
    ** Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.

source /opt/xilinx/Xilinx_Vivado_vitis_2019.2/Vivado/2019.2/scripts/vivado_hls/hls.tcl -notrace
INFO: Applying HLS Y2K22 patch v1.2 for IP revision
INFO: [HLS 200-10] Running '/opt/xilinx/Xilinx_Vivado_vitis_2019.2/Vivado/2019.2/bin/unwrapped/lnx64.o/vivado_hls'
INFO: [HLS 200-10] For user 'nz264' on host 'en-ec-brg-zhang-xcel.coecis.cornell.edu' (Linux_x86_64 version 3.10.0-1160.76.1.el7.x86_64) on Mon Jan 09 18:08:59 EST 2023
INFO: [HLS 200-10] On os "CentOS Linux release 7.9.2009 (Core)"
INFO: [HLS 200-10] In directory '/work/shared/users/phd/nz264/mlir/debug/vivado_prjs/fixed_packing'
Sourcing Tcl script 'run.tcl'
INFO: [HLS 200-10] Opening and resetting project '/work/shared/users/phd/nz264/mlir/debug/vivado_prjs/fixed_packing/kernel.prj'.
INFO: [HLS 200-10] Adding design file 'kernel.cpp' to the project
INFO: [HLS 200-10] Adding test bench file 'host.cpp' to the project
INFO: [HLS 200-10] Opening and resetting solution '/work/shared/users/phd/nz264/mlir/debug/vivado_prjs/fixed_packing/kernel.prj/solution1'.
INFO: [HLS 200-10] Cleaning up the solution database.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg484-1'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch GCC as the compiler.
   Compiling ../../../../host.cpp in debug mode
   Compiling ../../../../kernel.cpp in debug mode
../../../../kernel.cpp: In function ‘void kernel(ap_fixed<5, 2>*, ap_fixed<5, 2>*)’:
../../../../kernel.cpp:7:42: error: use of deleted function ‘kernel(ap_fixed<5, 2>*, ap_fixed<5, 2>*)::<anonymous union>::<constructor>()’
     union {ap_uint<5> ui; ap_int<5> si;} un;
                                          ^~
../../../../kernel.cpp:7:11: note: ‘kernel(ap_fixed<5, 2>*, ap_fixed<5, 2>*)::<anonymous union>::<constructor>()’ is implicitly deleted because the default definition would be ill-formed:
     union {ap_uint<5> ui; ap_int<5> si;} un;
           ^
../../../../kernel.cpp:7:23: error: union member ‘kernel(ap_fixed<5, 2>*, ap_fixed<5, 2>*)::<anonymous union>::ui’ with non-trivial ‘ap_uint<_AP_W>::ap_uint() [with int _AP_W = 5]’
     union {ap_uint<5> ui; ap_int<5> si;} un;
                       ^~
../../../../kernel.cpp:7:37: error: union member ‘kernel(ap_fixed<5, 2>*, ap_fixed<5, 2>*)::<anonymous union>::si’ with non-trivial ‘ap_int<_AP_W>::ap_int() [with int _AP_W = 5]’
     union {ap_uint<5> ui; ap_int<5> si;} un;
                                     ^~
../../../../kernel.cpp:7:42: error: use of deleted function ‘kernel(ap_fixed<5, 2>*, ap_fixed<5, 2>*)::<anonymous union>::~<constructor>()’
     union {ap_uint<5> ui; ap_int<5> si;} un;
                                          ^~
../../../../kernel.cpp:7:11: note: ‘kernel(ap_fixed<5, 2>*, ap_fixed<5, 2>*)::<anonymous union>::~<constructor>()’ is implicitly deleted because the default definition would be ill-formed:
     union {ap_uint<5> ui; ap_int<5> si;} un;
           ^
../../../../kernel.cpp:7:23: error: union member ‘kernel(ap_fixed<5, 2>*, ap_fixed<5, 2>*)::<anonymous union>::ui’ with non-trivial ‘ap_uint<5>::~ap_uint()’
     union {ap_uint<5> ui; ap_int<5> si;} un;
                       ^~
../../../../kernel.cpp:7:37: error: union member ‘kernel(ap_fixed<5, 2>*, ap_fixed<5, 2>*)::<anonymous union>::si’ with non-trivial ‘ap_int<5>::~ap_int()’
     union {ap_uint<5> ui; ap_int<5> si;} un;
                                     ^~
make: *** [obj/kernel.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
4
    while executing
"source run.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel \#0 [list source $arg] "

INFO: [Common 17-206] Exiting vivado_hls at Mon Jan  9 18:09:08 2023...
